# mstts

./: .gitignore  README.md  pyproject.toml
onecore-tts/OneCoreTTS/: OneCoreTTS.csproj  Program.cs
src/mstts/: __init__.py  cli.py  contracts.py  engine.py  text2tts.py
tests/: __init__.py  test_contracts.py  test_engine.py
